# rust-musl-segfault

./: Cargo.toml  Dockerfile
src/: main.rs
