[package]
name = "wawa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["macros", "tokio-macros", "rt-multi-thread"] }
rdkafka = { version = "0.29.0", features = ["ssl", "cmake-build", "tokio"] , default-features = false}